<resources>
        <string name="app_name">Death Num</string>
        <string name="death_num">Death num</string>
        <string name="language_choice">Выбор языка</string>
        <string name="single_player">ОДИНОЧНАЯ ИГРА</string>
        <string name="two_players">ДВА ИГРОКА</string>
        <string name="super_game">СУПЕРИГРА</string>
        <string name="exit">ВЫХОД</string>
        <string name="rules">ПРАВИЛА</string>
        <string name="statistics">СТАТИСТИКА</string>
        <string name="russian">Русский</string>
        <string name="english">English</string>
        <string name="fiftyfifty">50 НА 50</string>
        <string name="death_numone">Смертельное число</string>
        <string name="game_over">Игра завершена!</string>
        <string name="final_score">Итоговое количество баллов:</string>
        <string name="see_results">Посмотреть результаты</string>
        <string name="exit_go">Выйти</string>
        <string name="deathnumOnepl">Смертельное число: </string>
        <string name="PointsOnePl">Количество баллов: </string>
        <string name="exitOnePl">Выйти</string>
        <string name="pointsFiftyFifty">Очки: </string>
        <string name="exitFiftyFifty">Выйти</string>
        <string name="deathnumTwopl1">Смертельное число: </string>
        <string name="PointsTwoPl1">Количество баллов: </string>
        <string name="exitTwoPl1">Выйти</string>
        <string name="deathnumTwopl2">Смертельное число: </string>
        <string name="PointsTwoPl2">Количество баллов: </string>
        <string name="exitTwoPl2">Выйти</string>
        <string name="yes">Да</string>
        <string name="no">Нет</string>
        <string name="Alertbuil">Это смертельная карта?</string>
        <string name="AlertTwo">Загадал</string>
        <string name="textAlert">Загадайте число от 1 до 12</string>
    </resources>
