<!-- res/layout/custom_dialog.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:minHeight="150dp"
    android:background="@color/color_blue">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Alertbuil"
        android:textColor="@color/color_black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">


        <Button
            android:id="@+id/btn_yes"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/color_lime"
            android:text="@string/yes" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:backgroundTint="@color/color_red"/>
    </LinearLayout>
</LinearLayout>