<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/two"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/deathNumTextTwoPlayers1"
        android:text="@string/deathnumTwopl1"
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/color_black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/countTwo1"
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="604dp"
        android:text="@string/PointsTwoPl1"
        android:textColor="@color/color_black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <Button
        android:id="@+id/exitTwoPl1"
        android:layout_width="250sp"
        android:layout_height="60sp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="652dp"
        android:backgroundTint="@color/color_red"
        android:text="@string/exitTwoPl1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/card1Two1"
        android:layout_width="80sp"
        android:layout_height="130sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="156dp"
        android:text="Death num"
        android:textColor="@color/color_blue"
        android:textSize="12sp"
        android:textStyle="italic"
        app:backgroundTint="#FFFF00"
        app:cornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card2Two1"
        android:layout_width="80sp"
        android:layout_height="130sp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="156dp"
        android:text="Death num"
        android:textColor="@color/color_black"
        android:textSize="11sp"
        app:backgroundTint="#FFFF00"
        app:cornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card3Two1"
        android:layout_width="80sp"
        android:layout_height="130sp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="156dp"
        android:text="Death num"
        android:textColor="@color/color_black"
        android:textSize="11sp"
        app:backgroundTint="#FFFF00"
        app:cornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card4Two1"
        android:layout_width="80sp"
        android:layout_height="130sp"
        android:layout_marginStart="312dp"
        android:layout_marginTop="156dp"
        android:text="Death num"
        android:textColor="@color/color_black"
        android:textSize="11sp"
        app:backgroundTint="#FFFF00"
        app:cornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card5Two1"
        android:layout_width="80sp"
        android:layout_height="130sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="300dp"
        android:text="Death num"
        android:textColor="@color/color_black"
        android:textSize="11sp"
        app:backgroundTint="#FFFF00"
        app:cornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card6Two1"
        android:layout_width="80sp"
        android:layout_height="130sp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="304dp"
        android:text="Death num"
        android:textColor="@color/color_black"
        android:textSize="11sp"
        app:backgroundTint="#FFFF00"
        app:cornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card7Two1"
        android:layout_width="80sp"
        android:layout_height="130sp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="304dp"
        android:text="Death num"
        android:textColor="@color/color_black"
        android:textSize="11sp"
        app:backgroundTint="#FFFF00"
        app:cornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card8Two1"
        android:layout_width="80sp"
        android:layout_height="130sp"
        android:layout_marginStart="312dp"
        android:layout_marginTop="304dp"
        android:text="Death num"
        android:textColor="@color/color_black"
        android:textSize="11sp"
        app:backgroundTint="#FFFF00"
        app:cornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card9Two1"
        android:layout_width="80sp"
        android:layout_height="130sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="448dp"
        android:text="Death num"
        android:textColor="@color/color_black"
        android:textSize="11sp"
        app:backgroundTint="#FFFF00"
        app:cornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card10Two1"
        android:layout_width="80sp"
        android:layout_height="130sp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="448dp"
        android:text="Death num"
        android:textColor="@color/color_black"
        android:textSize="11sp"
        app:backgroundTint="#FFFF00"
        app:cornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card11Two1"
        android:layout_width="80sp"
        android:layout_height="130sp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="448dp"
        android:text="Death num"
        android:textColor="@color/color_black"
        android:textSize="11sp"
        app:backgroundTint="#FFFF00"
        app:cornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card12Two1"
        android:layout_width="80sp"
        android:layout_height="130sp"
        android:layout_marginStart="312dp"
        android:layout_marginTop="448dp"
        android:text="Death num"
        android:textColor="@color/color_black"
        android:textSize="11sp"
        app:backgroundTint="#FFFF00"
        app:cornerRadius="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>